[project]
name = "sigye"
version = "0.7.0"
description = "(시계) A simple command-line program for tracking time."
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "swilcox", email = "steven@wilcox.be" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "humanize>=4.11.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "click-aliases>=1.0.5",
    "click-datetime>=0.4.0",
]

[project.scripts]
sigye = "sigye.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["freezegun>=1.5.1", "pytest-cov>=6.0.0", "pytest>=8.3.3", "ruff>=0.8.1"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
